Fixed spacing on footer.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,7 +101,7 @@ main {
   max-height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   flex: 1 0 auto;
 }
 
@@ -128,7 +128,7 @@ main {
 
 #logo-box {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 100% ;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -255,7 +255,16 @@ td {
 footer {
   height: 30px;
   text-align: center;
-  padding-right: 10px;
+  /* vertical-align: middle; */
+  position: relative;
+}
+
+#footer-links {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 footer a:hover {
